package mx.edev.design_principles.single_responsibility.case2.solution;

class ReportSaver {

  public void saveReportToFile(String report) {
    // Code to save report to file
    System.out.println("Report saved to file: " + report);
  }
}
