package mx.edev.design_principles.single_responsibility.case2.solution;

class ReportSender {

  public void sendReportByEmail(String report) {
    // Code to send report by email
    System.out.println("Report sent by email: " + report);
  }
}
